MergedSearchGenerator extends ContentSearchGenerator
git-svn-id: https://irt-svn.stanford.edu/repos/irt/lane/laneweb/trunk@67843 c440208b-5602-0410-a095-92527a996296